Another file to overwrite. I should probably use a patch here.

--- a/templates/kfs-build-properties.erb
+++ b/templates/kfs-build-properties.erb
@@ -29,6 +29,7 @@ appenders=INFO, LogFile, StdOut
 
 # this is the kuali and workflow environment
 build.environment=dev
+external.config.directory=${user.home}/kuali/main/${build.environment}
 
 # these properties are related to ${build.environment} - you should review them, if you change that property
 # you will need to obtain the values for these properties for a given ${build.environment} from someone on the project
