--- a/templates/kfs-build-properties.erb
+++ b/templates/kfs-build-properties.erb
@@ -2,7 +2,8 @@
 # comment out if you want to run the test deployment process locally to evaluate the output
 is.local.build=
 
-base.directory=@input.base.directory@
+build.environment=dev
+base.directory=${user.home}/kuali/main/${build.environment}
 
 # these properties are used for bypassing sections of clean and filter targets
 #do.filter.project.help
