--- a/templates/impex-build-properties.erb
+++ b/templates/impex-build-properties.erb
@@ -72,7 +72,7 @@ post.import.workflow.ingester.launcher.ant.xml.directory.property=workflow.dir
 post.import.workflow.ingester.jdbc.url.property=datasource.url
 post.import.workflow.ingester.username.property=datasource.username
 post.import.workflow.ingester.password.property=datasource.password
-#post.import.workflow.ingester.additional.command.line=-Ddatasource.ojb.platform=MySQL \
+post.import.workflow.ingester.additional.command.line=-Ddatasource.ojb.platform=MySQL 
 #-Dbase.directory=/java \
 #-Dis.local.build= \
 #-Drice.ksb.batch.mode=true \
